# semantic-writing-assistant

./: .env.example  .gitignore  BLANK_SCREEN_SOLUTION.md  CHANGELOG.md  CHINESE_LOCALIZATION_REPORT.md  EDITOR_TOOLBAR_ENHANCEMENT_REPORT.md  IMPLEMENTATION_REPORT.md  KEYBOARD_SHORTCUTS_FIX_REPORT.md  LAYOUT_FIX_REPORT.md  MENU_EDITOR_UI_ENHANCEMENT_REPORT.md  MULTI_THEME_SYSTEM_REPORT.md  PHASE3_IMPLEMENTATION_REPORT.md  PROJECT_ENHANCEMENTS.md  PROJECT_STATUS_REPORT.md  README.md  RUNTIME_ERRORS_FIX_REPORT.md  SIDEBAR_LAYOUT_IMPROVEMENT_REPORT.md  SIDEBAR_LAYOUT_REORGANIZATION_REPORT.md  THEME_SELECTOR_PORTAL_FIX_REPORT.md  THEME_SELECTOR_ZINDEX_FIX_REPORT.md  THEME_TOGGLE_FIX_REPORT.md  UI_OPTIMIZATION_REPORT.md  index.html  package-lock.json  package.json  tailwind.config.js  test-features.js  test-project.html  vite.config.ts
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  USER_MANUAL.md
plans/: 2025-07-16-intelligent-writing-platform-refactor-v1.md
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  file_handler.rs  main.rs  storage.rs
src/components/AI/: AIAssistantPage.tsx  AIConfiguration.tsx
src/components/Dashboard/: Dashboard.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: use-toast.ts  useAutoSave.ts  useSemanticAnalysis.ts  useShortcuts.ts
src/services/: aiService.ts  semanticEngine.ts  tauriService.ts
src/stores/: appStore.ts
src/styles/: index.css  themes.css
src/test/: setup.ts
src/types/: index.ts  platform.ts  tauri.ts
src/utils/: nlp.ts  termExtractor.ts  workerManager.ts
(+42 files in other folders)
